{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 19,
  "lineage": "d4fc049e-4937-8e8a-9c9f-1c7f293c01b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be8d16efcaec0266",
            "association_id": "eipassoc-0969b0edc017324e2",
            "domain": "vpc",
            "id": "eipalloc-0be8d16efcaec0266",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0fa3b85ed3bbeacbe",
            "private_dns": "ip-10-0-1-91.ap-south-1.compute.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-43-205-193-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.193.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588496971094:internet-gateway/igw-07d98c2abb9824b61",
            "id": "igw-07d98c2abb9824b61",
            "owner_id": "588496971094",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0fea7c5854b8f6780"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be8d16efcaec0266",
            "connectivity_type": "public",
            "id": "nat-0764fc31d31f1f1e4",
            "network_interface_id": "eni-0fa3b85ed3bbeacbe",
            "private_ip": "10.0.1.91",
            "public_ip": "43.205.193.244",
            "subnet_id": "subnet-0e3383ebf95005126",
            "tags": {
              "Name": "natgateway"
            },
            "tags_all": {
              "Name": "natgateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.subnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588496971094:route-table/rtb-0e6c2feed4b91ef52",
            "id": "rtb-0e6c2feed4b91ef52",
            "owner_id": "588496971094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0764fc31d31f1f1e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTable-1"
            },
            "tags_all": {
              "Name": "RouteTable-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea7c5854b8f6780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgateway",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588496971094:route-table/rtb-004e0453793a1b175",
            "id": "rtb-004e0453793a1b175",
            "owner_id": "588496971094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d98c2abb9824b61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-RouteTable"
            },
            "tags_all": {
              "Name": "terraform-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fea7c5854b8f6780"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e30d6f5439a9be",
            "route_table_id": "rtb-0e6c2feed4b91ef52",
            "subnet_id": "subnet-0fcfb0e08267062ba"
          },
          "dependencies": [
            "aws_nat_gateway.natgateway",
            "aws_route_table.route-table-1",
            "aws_subnet.subnet-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e187c08e27bf21d",
            "route_table_id": "rtb-004e0453793a1b175",
            "subnet_id": "subnet-0e3383ebf95005126"
          },
          "dependencies": [
            "aws_route_table.terraform-route-table",
            "aws_subnet.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588496971094:subnet/subnet-0e3383ebf95005126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3383ebf95005126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588496971094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0fea7c5854b8f6780"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588496971094:subnet/subnet-0fcfb0e08267062ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcfb0e08267062ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588496971094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0fea7c5854b8f6780"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588496971094:vpc/vpc-0fea7c5854b8f6780",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d45dd5e780141fd8",
            "default_route_table_id": "rtb-0df1a937229da74be",
            "default_security_group_id": "sg-07451d4494415d1aa",
            "dhcp_options_id": "dopt-02437e14abffb0824",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fea7c5854b8f6780",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df1a937229da74be",
            "owner_id": "588496971094",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}